--- a/src/components/IntroPage/IntroPage.css
+++ b/src/components/IntroPage/IntroPage.css
@@ -3,10 +3,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 10vh 0;
 }
 
 .yoda-text-img {
@@ -15,11 +15,10 @@
 
 .yoda-text {
   border: 3px solid gold;
-  margin-bottom: 70px;
   align-self: center;
-  width: 80%;
+  width: 60%;
   text-align: center;
-  padding: 20px 50px;
+  padding: 70px 50px;
   border-radius: 30px;
   background-color: black;
   color: #0a0a0a;
@@ -36,6 +35,8 @@
   justify-content: center;
 }
 .alien {
+  width: 43%;
+  margin: 100px;
 }
 
 .text-yoda:after {
@@ -43,7 +44,7 @@
   animation: text 10s linear normal;
   animation-fill-mode: forwards;
   animation-iteration-count: 1;
-  font-size: 2.5rem;
+  font-size: 1.7rem;
 }
 .bubble_text:after {
   content: "";
@@ -73,6 +74,10 @@
   margin-top: 30px;
 }
 
+.label {
+  margin-bottom: 60px;
+}
+
 .button-intro {
   font-size: 50px;
   background-color: #ff0000;
@@ -80,6 +85,7 @@
   padding: 20px;
   border-radius: 30px;
   font-weight: 700;
+  padding-bottom: 00px;
 }
 
 @keyframes text {
@@ -94,4 +100,31 @@
   100% {
     content: "But if begin you want, first your name you need to tell me ready are you go ??";
   }
+}
+
+@media screen and (min-width: 1100px) {
+.alien{
+  width: 25%;
+
+}
+.player-form-input {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+}
+.button-intro {
+  font-size: 20px;
+  background-color: #ff0000;
+  color: gold;
+  padding: 20px;
+  border-radius: 30px;
+  font-weight: 700;
+}
+.text-yoda:after{
+  font-size: 1.2rem;
+}
+.yoda-text{
+  width: 50%;
+  padding: 10px 30px;
+}
 }
